<resources>
	<string name="app_name">CRFCD</string>

	<string name="saving_image">Saving Image</string>
	<string name="resizing_image">Resizing Image</string>
	<string name="recognizing">Recognizing</string>
	<string name="loading_model">Loading Model</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="website">https://dummywebsite.com</string>
	<string name="nav_home">Home</string>
	<string name="nav_share">Share</string>
	<string name="nav_rate_us">Rate us</string>
	<string name="threshold">Threshold</string>
	<string name="nav_communicate">Communicate</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>

	<string name="first_slide_title">First slide title</string>
	<string name="second_slide_title">Second slide title</string>
	<string name="third_slide_title">Third slide title</string>

	<string name="first_slide_description">First slide description</string>
	<string name="second_slide_description">Second slide description</string>
	<string name="third_slide_description">Third slide description</string>

	<string name="skip">Skip</string>
	<string name="next">Next</string>
	<string name="lets_get_started">Lets get started</string>
	<string name="boarding_viewpager_dot">•</string>
	<string name="paired_devices">Paired Devices</string>

	<string name="currency_icon">₹</string>
	<string name="select_currency">Select Currency</string>

</resources>