<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/rectangle_with_corners"
	android:orientation="vertical">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:layout_marginHorizontal="16dp">

		<TextView
			android:id="@+id/main_currency_chooser_logo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/currency_icon"
			android:textSize="30sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toLeftOf="@id/main_currency_chooser_title"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/main_currency_chooser_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/select_currency"
			android:textSize="22sp"
			android:textStyle="bold|italic"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toRightOf="@id/main_currency_chooser_logo"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<View
			android:layout_width="match_parent"
			android:layout_height="2dp"
			android:layout_marginHorizontal="32dp"
			android:layout_marginTop="2dp"
			android:background="@color/gray"
			android:src="@drawable/recycler_border"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@id/main_currency_chooser_logo" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/main_currency_chooser_text_view"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="18sp"
			android:layout_marginHorizontal="16sp"
			tools:text="@string/app_name" />

	</LinearLayout>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/main_currency_chooser_recycler"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_margin="16dp"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toBottomOf="@id/main_currency_chooser_logo" />

</LinearLayout>