<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".OnBoardingActivity">

	<androidx.viewpager2.widget.ViewPager2
		android:id="@+id/boarding_viewpager"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/boarding_skip"
		style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:drawableEnd="@drawable/ic_skip"
		android:text="@string/skip"
		android:textSize="16sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHorizontal_bias="1"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/boarding_lower_layout"
		android:layout_width="match_parent"
		android:layout_height="150dp"
		android:orientation="horizontal"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent">

		<com.google.android.material.button.MaterialButton
			android:id="@+id/boarding_lets_get_started"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginHorizontal="30dp"
			android:text="@string/lets_get_started"
			android:textSize="16sp"
			android:visibility="invisible"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0" />

		<LinearLayout
			android:id="@+id/boarding_dots_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="0.1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.75">

			<TextView
				android:id="@+id/boarding_dot1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=" •"
				android:textSize="35sp" />

			<TextView
				android:id="@+id/boarding_dot2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=" •"
				android:textSize="35sp" />

			<TextView
				android:id="@+id/boarding_dot3"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text=" •"
				android:textSize="35sp" />

		</LinearLayout>

		<com.google.android.material.button.MaterialButton
			android:id="@+id/boarding_next"
			style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:drawableEnd="@drawable/ic_next"
			android:text="@string/next"
			android:textSize="16sp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintHorizontal_bias="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.8" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

